Version 2.0 - 2018-04-13
* FEA#8549 Add unique constraint on distribution network code
* FEA#8122 Make the user's distribution network available in preferences client side
* BUG#8139 Add an example of distribution network codification in test case

Version 1.14 - 2017-11-09
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Add attributes portfolio and distributor on distribution network
* FEA#0000 Add portfolio on party
* FEA#0000 Add default portfolio in party configuration

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Rework to properly manage brokers

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation