@@ -1,3 +1,5 @@
+* BUG#8918 Set default company to migrate existing distribution networks in database when installing the module
+
 Version 2.0 - 2018-04-13
 * FEA#8549 Add unique constraint on distribution network code
 * FEA#8122 Make the user's distribution network available in preferences client side
